[gd_scene load_steps=6 format=3 uid="uid://skuk7h87q2j"]

[ext_resource type="Script" uid="uid://csrw0h1jvwvjg" path="res://scenes/pause_menu.gd" id="1_v4r4p"]
[ext_resource type="Texture2D" uid="uid://cdk8iglxwtelj" path="res://assets/2D/UI/metalPanel_blue.png" id="2_7l7mv"]
[ext_resource type="Texture2D" uid="uid://bi6ulv44bh2wo" path="res://assets/2D/UI/blue_button02.png" id="3_v4r4p"]
[ext_resource type="Texture2D" uid="uid://i0838fdl0es5" path="res://assets/2D/UI/blue_button03.png" id="4_1s2dm"]
[ext_resource type="Texture2D" uid="uid://ccwjio6rocau2" path="res://assets/2D/UI/red_cross.png" id="5_1s2dm"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4r4p")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="ReferenceRect" type="ReferenceRect" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
border_width = 3.0

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("2_7l7mv")
patch_margin_left = 25
patch_margin_top = 50
patch_margin_right = 25
patch_margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Continue" type="TextureButton" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_v4r4p")
texture_pressed = ExtResource("4_1s2dm")
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/Continue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main Menu" type="TextureButton" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_v4r4p")
texture_pressed = ExtResource("4_1s2dm")
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/Main Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="TextureButton" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_v4r4p")
texture_pressed = ExtResource("4_1s2dm")
stretch_mode = 3

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="CloseButton" type="TextureButton" parent="HBoxContainer/MarginContainer2/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("5_1s2dm")
texture_pressed = ExtResource("5_1s2dm")

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/MarginContainer2/VBoxContainer/Continue" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/VBoxContainer/Continue" to="." method="_on_start_game"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/VBoxContainer/Main Menu" to="." method="_on_start_game"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer2/MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
